versions/26.11.0/docs/MediaRootPartialUpdate.md
# MediaRootPartialUpdate

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**custom_fields** | [**list[CustomFieldReference]**](CustomFieldReference.md) |  | [optional] 
**workflow** | **dict(str, str)** |  | [optional] 
**ai_config** | **dict(str, str)** |  | [optional] 
**veritone_config** | **dict(str, str)** |  | [optional] 
**volume** | [**VolumeMiniReference**](VolumeMiniReference.md) |  | [optional] 
**jobs** | [**list[JobReference]**](JobReference.md) |  | [optional] 
**name** | **str** |  | [optional] 
**path** | **str** |  | [optional] [readonly] 
**needs_rescan** | **bool** |  | [optional] 
**view_mode** | **str** |  | [optional] 
**view_style** | **str** |  | [optional] 
**view_default_tab** | **str** |  | [optional] 
**show_tags** | **bool** |  | [optional] 
**show_comments** | **bool** |  | [optional] 
**show_locations** | **bool** |  | [optional] 
**show_custom_fields** | **bool** |  | [optional] 
**show_ratings** | **bool** |  | [optional] 
**show_subclips** | **bool** |  | [optional] 
**show_markers** | **bool** |  | [optional] 
**show_history** | **bool** |  | [optional] 
**show_ai_metadata** | **bool** |  | [optional] 
**prefetch_thumbnail_strips** | **bool** |  | [optional] 
**cover** | **str** |  | [optional] 
**name_field** | **str** |  | [optional] 
**share_comments** | **bool** |  | [optional] 
**share_link_duration** | **int** |  | [optional] 
**default_proxy_profile** | **int** |  | [optional] 
**cloud_proxy_profile** | **int** |  | [optional] 
**veritone_connection** | **int** |  | [optional] 
**veritone_proxy_profile** | **int** |  | [optional] 
**ai_connection** | **int** |  | [optional] 
**ai_proxy_profile** | **int** |  | [optional] 
**proxy_profiles** | **list[int]** |  | [optional] 
**tags** | **list[int]** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


